# ecommerce-discount-service

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/endpoints/: cart.py  voucher.py
app/db/: fake_data.py
app/models/: discount.py  domain.py  enums.py
app/schemas/: cart.py  discount_rules.py  voucher.py
app/services/: discount_service.py
documentation/: API.md  technical.md
tests/: test_discount.py
