[project]
name = "ecommerce-discount-service"
version = "0.1.0"
description = "Discount calculation service for a fashion e-commerce platform. Handles brand, category, voucher and bank offer discounts with a defined stacking order."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.2",
    "uvicorn[standard]==0.42.0",
]


[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
